# booking-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_bookings.py  0002_status_created_at_index.py  0003_index_created_at.py
app/: config.py  db.py  logging.py  main.py  models.py  schemas.py
app/api/: bookings.py  health.py
app/services/: bookings.py
app/worker/: celery_app.py  db_sync.py  notifications.py  tasks.py
tests/: conftest.py  test_api.py  test_worker.py
